# priunnagru.github.io

./: about.html  index.html  pages.html  review.html  sources.html
.github/workflows/: deploy.yml
frontend/: .gitignore  Cargo.toml  Dioxus.toml  build.rs
frontend/assets/: 404.html  main.css  tailwind.css
frontend/src/: api.rs  main.rs  types.rs
frontend/src/components/: anime_card.rs  custom_game.rs  game.rs  home.rs  mod.rs  win_screen.rs
styles/: style.css
